Preliminary update patient test forms

--- a/Application/NorthwindApplication.csproj
+++ b/Application/NorthwindApplication.csproj
@@ -121,6 +121,12 @@
     <Compile Include="View\NWNewTest.Designer.cs">
       <DependentUpon>NWNewTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\NwUpdatePatientTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\NwUpdatePatientTest.Designer.cs">
+      <DependentUpon>NwUpdatePatientTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\NWViewEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -251,6 +257,9 @@
       <DependentUpon>NWNewTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\NwPatientVisitSummaryReport.rdlc" />
+    <EmbeddedResource Include="View\NwUpdatePatientTest.resx">
+      <DependentUpon>NwUpdatePatientTest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\NWViewEmployee.resx">
       <DependentUpon>NWViewEmployee.cs</DependentUpon>
     </EmbeddedResource>
